@@ -1,3 +1,11 @@
+2012-07-13  Hans-Peter Nilsson  <hp@axis.com>
+
+	* ld-elf/foo0.s: Use ARM-compatible .section syntax.
+	* ld-elf/foo1.s: Likewise.
+	* ld-elf/foo2.s: Likewise.
+	* ld-elf/foo3.s: Likewise.
+	* ld-elf/foon.s: Likewise.
+
 2012-07-10  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/14156
